SSCS-9911:  Case Access Management – Migration of data