@@ -4,9 +4,9 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.5.6'
-  id 'org.owasp.dependencycheck' version '6.5.2.1'
-  id 'com.github.ben-manes.versions' version '0.39.0'
+  id 'org.springframework.boot' version '2.6.2'
+  id 'org.owasp.dependencycheck' version '6.5.3'
+  id 'com.github.ben-manes.versions' version '0.41.0'
   id 'org.sonarqube' version '3.3'
 }
 
@@ -19,15 +19,6 @@ allprojects {
 }
 
 sourceSets {
-  functionalTest {
-    java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
-      srcDir file('src/functionalTest/java')
-    }
-    resources.srcDir file('src/functionalTest/resources')
-  }
-
   integrationTest {
     java {
       compileClasspath += main.output
@@ -36,19 +27,10 @@ sourceSets {
     }
     resources.srcDir file('src/integrationTest/resources')
   }
-
-  smokeTest {
-    java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
-      srcDir file('src/smokeTest/java')
-    }
-    resources.srcDir file('src/smokeTest/resources')
-  }
 }
 
 tasks.withType(JavaCompile) {
-  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
+  options.compilerArgs << "-Xlint:unchecked" << '-parameters' << '-Xlint:deprecation'
 }
 
 tasks.withType(Test) {
@@ -59,29 +41,12 @@ tasks.withType(Test) {
   }
 }
 
-test {
-  failFast = true
-}
-
-task functional(type: Test) {
-  description = "Runs functional tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
-}
-
 task integration(type: Test) {
   description = "Runs integration tests"
   group = "Verification"
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
   classpath = sourceSets.integrationTest.runtimeClasspath
   failFast = true
-}
-
-task smoke(type: Test) {
-  description = "Runs Smoke Tests"
-  testClassesDirs = sourceSets.smokeTest.output.classesDirs
-  classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
 checkstyle {
@@ -91,12 +56,20 @@ checkstyle {
 }
 
 pmd {
-  toolVersion = "6.39.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
+  toolVersion = "6.5.0"
+  sourceSets = [sourceSets.main, sourceSets.test]
   reportsDir = file("$project.buildDir/reports/pmd")
-  // https://github.com/pmd/pmd/issues/876
-  ruleSets = []
   ruleSetFiles = files("config/pmd/ruleset.xml")
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+jacoco {
+  toolVersion = "0.8.2"
 }
 
 jacocoTestReport {
@@ -108,12 +81,17 @@ jacocoTestReport {
   }
 }
 
-project.tasks['sonarqube'].dependsOn jacocoTestReport
+project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
+check.dependsOn integration
+checkstyleMain.shouldRunAfter(compileJava)
+test.shouldRunAfter(checkstyleTest)
+integration.shouldRunAfter(checkstyleIntegrationTest)
+integration.shouldRunAfter(test)
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: sscs-case-migration"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:sscs-case-migration"
+    property "sonar.projectName", "Reform :: spring-boot-template"
+    property "sonar.projectKey", "uk.gov.hmcts.reform:spring-boot-template"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
   }
 }
@@ -132,9 +110,6 @@ dependencyUpdates {
 
 // https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
-  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-  // range of 0-10 fails the build, anything greater and it doesn't fail the build
-  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
   suppressionFile = 'config/owasp/suppressions.xml'
 
   analyzers {
@@ -146,7 +121,14 @@ dependencyCheck {
 repositories {
   mavenLocal()
   mavenCentral()
+
+  jcenter()
+
   maven { url 'https://jitpack.io' }
+
+  maven {
+    url 'https://repo.spring.io/libs-milestone'
+  }
 }
 
 ext {
@@ -154,11 +136,28 @@ ext {
   log4JVersion = "2.17.0"
 }
 
+ext {
+  springCloudVersion = '2021.0.0'
+}
+
+dependencyManagement {
+  dependencies {
+    imports {
+      mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+  }
+}
+
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation('org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.0')
+  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.0'
+
+  implementation 'com.github.hmcts.ccd-case-migration-starter:domain:3.0.0'
+  implementation 'com.github.hmcts.ccd-case-migration-starter:processor:3.0.0'
+  implementation 'com.github.hmcts:sscs-common:4.6.33-RC-SSCS-9902'
+
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
 
@@ -169,21 +168,13 @@ dependencies {
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
 
   testImplementation(platform('org.junit:junit-bom:5.8.2'))
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
-    exclude group: 'junit', module: 'junit'
-    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-  }
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
-
-  functionalTestImplementation sourceSets.main.runtimeClasspath
-
-  smokeTestImplementation sourceSets.main.runtimeClasspath
-  smokeTestImplementation sourceSets.test.runtimeClasspath
 }
 
-mainClassName = 'uk.gov.hmcts.reform.demo.Application'
+mainClassName = 'uk.gov.hmcts.reform.migration.CaseMigrationRunner'
 
 bootJar {
   archiveFileName = "sscs-case-migration.jar"
@@ -191,11 +182,6 @@ bootJar {
   manifest {
     attributes('Implementation-Version': project.version.toString())
   }
-}
-
-// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
-rootProject.tasks.named("processSmokeTestResources") {
-  duplicatesStrategy = 'include'
 }
 
 wrapper {
